[package]
name = "nctgo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
reqwest = "0.11.23"
scraper = "0.18.1"
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-runtime = "0.37.0"
shuttle-secrets = "0.37.0"
shuttle-serenity = "0.37.0"
tokio =  {version = "1.26.0", features = ["macros"]}
tracing = "0.1.37"
